--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -5,6 +5,8 @@
 
 \documentclass[kdmile,a4paper]{kdmile} % NOTE: kdmile is published on A4 paper
 \usepackage{graphicx,url}  % for using figures and url format
+\usepackage{caption}
+\usepackage{subcaption}
 \usepackage[T1]{fontenc}   % avoids warnings such as "LaTeX Font Warning: Font shape 'OMS/cmtt/m/n' undefined"
 \usepackage[brazilian]{babel}
 \usepackage[usenames,dvipsnames]{color}
@@ -108,7 +110,35 @@
 
 % Article abstract - it should be from 100 to 300 words
 \begin{abstract}
-  As técnicas de Aprendizado por Reforço permitem a solução de um problema através da escolha de ações que maximizem valores de recompensas recebidas que refletem a qualidade das ações tomadas pelo agente em um processo de tentativa e erro. Em problemas com estrutura hierárquica, a solução final depende do encadeamento de soluções para sub-problemas aí presentes, sendo frequente a repetição de sub-problemas nesse encadeamento. Nesses casos, a utilização de políticas parciais permite o aprendizado e armazenamento das soluções individuais para cada sub-problema, que podem então ser utilizadas múltiplas vezes na composição de uma solução completa para o problema final, acelerando o aprendizado. Apesar de vantajosa, a utilização de políticas parciais necessita de definições por parte do projetista, o que representa uma sobrecarga. Para contornar esse problema, foram propostas técnicas de descoberta automática de políticas parciais, dentre as quais a utilização de motivação intrínseca se destaca por permitir ao agente aprender soluções de sub-problemas úteis na solução do problema final sem a necessidade de se definir manualmente novas recompensas para esses sub-problemas individualmente. Apesar de promissora, essa proposta utiliza um conjunto de componentes de aprendizado que ainda carece de investigação aprofundada acerca dos impactos individual e coletivo de cada componente, notadamente a aplicação das políticas parciais durante o aprendizado. Neste trabalho são investigadas estratégias de aplicação de políticas parciais durante o Aprendizado por Reforço com Motivação Intrínseca. Duas estratégias são propostas e o desempenho de cada estratégia é avaliado experimentalmente. Com base nesta avaliação, uma nova estratégia é proposta, a qual utiliza as alternativas que apresentaram o melhor desempenho na avaliação experimental.
+  As técnicas de Aprendizado por Reforço permitem a solução de um
+  problema através da escolha de ações que maximizem valores de
+  recompensas recebidas que refletem a qualidade das ações tomadas
+  pelo agente em um processo de tentativa e erro. Em problemas com
+  estrutura hierárquica, a solução final depende do encadeamento de
+  soluções para sub-problemas aí presentes, sendo frequente a
+  repetição de sub-problemas nesse encadeamento. Nesses casos, a
+  utilização de políticas parciais permite o aprendizado e
+  armazenamento das soluções individuais para cada sub-problema, que
+  podem então ser utilizadas múltiplas vezes na composição de uma
+  solução completa para o problema final, acelerando o
+  aprendizado. Apesar de vantajosa, a utilização de políticas parciais
+  necessita de definições por parte do projetista, o que representa
+  uma sobrecarga. Para contornar esse problema, foram propostas
+  técnicas de descoberta automática de políticas parciais, dentre as
+  quais a utilização de motivação intrínseca se destaca por permitir
+  ao agente aprender soluções de sub-problemas úteis na solução do
+  problema final sem a necessidade de se definir manualmente novas
+  recompensas para esses sub-problemas individualmente. Apesar de
+  promissora, essa proposta utiliza um conjunto de componentes de
+  aprendizado que ainda carece de investigação aprofundada acerca dos
+  impactos individual e coletivo de cada componente, notadamente a
+  aplicação das políticas parciais durante o aprendizado. Neste
+  trabalho são investigadas estratégias de aplicação de políticas
+  parciais durante o Aprendizado por Reforço com Motivação
+  Intrínseca. Duas estratégias são propostas e o desempenho de cada
+  estratégia é avaliado experimentalmente. Com base nesta avaliação,
+  uma nova estratégia é proposta, a qual utiliza as alternativas que
+  apresentaram o melhor desempenho na avaliação experimental.
 \end{abstract}
 
 % ACM Computing Classification System categories
@@ -140,31 +170,157 @@
 \maketitle
 
 % \section{Introdução}
-% Problemas nos quais o agente deve tomar uma série de decisões sequenciais podem ser resolvidos através de técnicas de Aprendizado por Reforço \cite{rlsutton,rlczaba}, em que o agente recebe um reforço numérico indicando a qualidade de cada ação tomada. Esse processo de aprendizado ocorre por tentativa e erro, no qual o agente alterna entre a \emph{aplicação} do conhecimento adquirido até o momento para selecionar a melhor ação e a \emph{exploração} do ambiente, onde o agente experimenta novas ações, aumentando o seu conhecimento sobre o ambiente e o problema. Apesar do sucesso apresentado na aplicação de técnicas AR a problemas reais \cite{tesauro1995tdgammon,barto1996elevator,scardua2002optimal,da2006inverse,abbeel2007helicopter}, elas podem apresentar indesejada lentidão na obtenção das soluções \cite{barto2003hrl}.
+% Problemas nos quais o agente deve tomar uma série de decisões
+% sequenciais podem ser resolvidos através de técnicas de Aprendizado
+% por Reforço \cite{rlsutton,rlczaba}, em que o agente recebe um
+% reforço numérico indicando a qualidade de cada ação tomada. Esse
+% processo de aprendizado ocorre por tentativa e erro, no qual o
+% agente alterna entre a \emph{aplicação} do conhecimento adquirido
+% até o momento para selecionar a melhor ação e a \emph{exploração} do
+% ambiente, onde o agente experimenta novas ações, aumentando o seu
+% conhecimento sobre o ambiente e o problema. Apesar do sucesso
+% apresentado na aplicação de técnicas AR a problemas reais
+% \cite{tesauro1995tdgammon,barto1996elevator,scardua2002optimal,da2006inverse,abbeel2007helicopter},
+% elas podem apresentar indesejada lentidão na obtenção das soluções
+% \cite{barto2003hrl}.
  
-% Uma forma de mitigar essa lentidão é explorar características da \emph{representação} do problema original que permitam a aplicação de técnicas de otimização. Um exemplo disso é a utilização de políticas parciais \cite{option1999}, que permitem que um problema de AR originalmente com representação monolítica seja representado de forma modular. Na nova representação, são determinados sub-problemas componentes do problema original, permitindo o aprendizado simultâneo da solução para o problema original e seus sub-problemas. Quando o problema original possui uma estrutura \emph{hierárquica}, é comum o agente ter de resolver mais de uma vez o mesmo sub-problema em momentos diferentes. Nesses casos, a utilização de políticas parciais apresenta a vantagem de acelerar o aprendizado por eliminar a necessidade de se aprender a solução para o mesmo sub-problema mais de uma vez, permitindo o reuso do conhecimento já adquirido na forma de políticas parciais \cite{option1999} e dessa forma acelerando o aprendizado.
+% Uma forma de mitigar essa lentidão é explorar características da
+% \emph{representação} do problema original que permitam a aplicação
+% de técnicas de otimização. Um exemplo disso é a utilização de
+% políticas parciais \cite{option1999}, que permitem que um problema
+% de AR originalmente com representação monolítica seja representado
+% de forma modular. Na nova representação, são determinados
+% sub-problemas componentes do problema original, permitindo o
+% aprendizado simultâneo da solução para o problema original e seus
+% sub-problemas. Quando o problema original possui uma estrutura
+% \emph{hierárquica}, é comum o agente ter de resolver mais de uma vez
+% o mesmo sub-problema em momentos diferentes. Nesses casos, a
+% utilização de políticas parciais apresenta a vantagem de acelerar o
+% aprendizado por eliminar a necessidade de se aprender a solução para
+% o mesmo sub-problema mais de uma vez, permitindo o reuso do
+% conhecimento já adquirido na forma de políticas parciais
+% \cite{option1999} e dessa forma acelerando o aprendizado.
 
-% Entretanto, para que as políticas parciais possam ser utilizadas, há a necessidade da definição de elementos cuja identificação pode não ser imediata à apreciação do problema, podendo causar sobrecarga em tempo de projeto. Para contornar esse revés, são estudadas técnicas de descoberta automática de políticas parciais \cite{stolle2002learning,bakker2004hierarchical,mcgovern2001automatic,imrl2004}, em que a definição das mesmas fica a cargo de um algoritmo responsável por identificar sub-problemas e criar políticas parciais para resolvê-los. Das diversas técnicas empregadas, pode ser destacada a utilização de \emph{motivação intrínseca} em AR \cite{imrl2004}, em que o agente recebe recompensas adicionais através de um mecanismo interno associado a variações de características do ambiente que lhe despertam \emph{marcado interesse}. Nessas técnicas, o agente é codificado de forma a associar sub-problemas a variações significativas de atributos selecionados na descrição fatorada do estado, reduzindo o trabalho de definição das políticas parciais à determinação dos atributos relevantes para a identificação dos sub-problemas.
+% Entretanto, para que as políticas parciais possam ser utilizadas, há
+% a necessidade da definição de elementos cuja identificação pode não
+% ser imediata à apreciação do problema, podendo causar sobrecarga em
+% tempo de projeto. Para contornar esse revés, são estudadas técnicas
+% de descoberta automática de políticas parciais
+% \cite{stolle2002learning,bakker2004hierarchical,mcgovern2001automatic,imrl2004},
+% em que a definição das mesmas fica a cargo de um algoritmo
+% responsável por identificar sub-problemas e criar políticas parciais
+% para resolvê-los. Das diversas técnicas empregadas, pode ser
+% destacada a utilização de \emph{motivação intrínseca} em AR
+% \cite{imrl2004}, em que o agente recebe recompensas adicionais
+% através de um mecanismo interno associado a variações de
+% características do ambiente que lhe despertam \emph{marcado
+% interesse}. Nessas técnicas, o agente é codificado de forma a
+% associar sub-problemas a variações significativas de atributos
+% selecionados na descrição fatorada do estado, reduzindo o trabalho
+% de definição das políticas parciais à determinação dos atributos
+% relevantes para a identificação dos sub-problemas.
 
-% Essa técnica foi aplicada com sucesso na solução de um problema com forte estrutura hierárquica \cite{imrl2004}, através da proposta de um algoritmo que utiliza em conjunto múltiplas técnicas de AR. Apesar da aprensentação detalhada do papel da motivação intrínseca no aprendizado, não há uma investigação mais aprofundada dos diversos componentes de aprendizado envolvidos algoritmo, notadamente a estratégia de aplicação das políticas parciais aprendidas. Neste trabalho, investigamos essa questão, apresentando algumas propostas de estratégias para a aplicação das políticas parciais aprendidas juntamente com a avaliação experimental de cada uma delas e uma breve discussão teórica.
+% Essa técnica foi aplicada com sucesso na solução de um problema com
+% forte estrutura hierárquica \cite{imrl2004}, através da proposta de
+% um algoritmo que utiliza em conjunto múltiplas técnicas de
+% AR. Apesar da aprensentação detalhada do papel da motivação
+% intrínseca no aprendizado, não há uma investigação mais aprofundada
+% dos diversos componentes de aprendizado envolvidos algoritmo,
+% notadamente a estratégia de aplicação das políticas parciais
+% aprendidas. Neste trabalho, investigamos essa questão, apresentando
+% algumas propostas de estratégias para a aplicação das políticas
+% parciais aprendidas juntamente com a avaliação experimental de cada
+% uma delas e uma breve discussão teórica.
 
 % \section{Fundamentos Teóricos}
-% Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec hendrerit tempor tellus. Donec pretium posuere tellus. Proin quam nisl, tincidunt et, mattis eget, convallis nec, purus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla posuere. Donec vitae dolor. Nullam tristique diam non turpis. Cras placerat accumsan nulla. Nullam rutrum. Nam vestibulum accumsan nisl.
+% Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
+% hendrerit tempor tellus. Donec pretium posuere tellus. Proin quam
+% nisl, tincidunt et, mattis eget, convallis nec, purus. Cum sociis
+% natoque penatibus et magnis dis parturient montes, nascetur
+% ridiculus mus. Nulla posuere. Donec vitae dolor. Nullam tristique
+% diam non turpis. Cras placerat accumsan nulla. Nullam rutrum. Nam
+% vestibulum accumsan nisl.
 
 % \section{Algoritmo}\label{sec:algoritmo}
-% Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec hendrerit tempor tellus. Donec pretium posuere tellus. Proin quam nisl, tincidunt et, mattis eget, convallis nec, purus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla posuere. Donec vitae dolor. Nullam tristique diam non turpis. Cras placerat accumsan nulla. Nullam rutrum. Nam vestibulum accumsan nisl.
+% Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
+% hendrerit tempor tellus. Donec pretium posuere tellus. Proin quam
+% nisl, tincidunt et, mattis eget, convallis nec, purus. Cum sociis
+% natoque penatibus et magnis dis parturient montes, nascetur
+% ridiculus mus. Nulla posuere. Donec vitae dolor. Nullam tristique
+% diam non turpis. Cras placerat accumsan nulla. Nullam rutrum. Nam
+% vestibulum accumsan nisl.
 
-% % No Algoritmo \ref{alg:modificado} encontram-se marcadas as modificações propostas em relação ao algoritmo original \cite{imrl2004}. O intuito é o de contribuir à proposta original soluções de eventuais ambiguidades ou aparentes inconsistências, dessa forma apresentando um algoritmo que, mantendo o espírito original da utilização de Motivação Instrínseca no Aprendizado por Reforço, acrescenta alternativas de implementação buscando obter melhorias de desempenho no aprendizado. Abaixo são descritas as motivações e respectivas motivações teóricas e/ou de cunho prático.
+% No Algoritmo \ref{alg:modificado} encontram-se marcadas as
+% modificações propostas em relação ao algoritmo original
+% \cite{imrl2004}. O intuito é o de contribuir à proposta original
+% soluções de eventuais ambiguidades ou aparentes inconsistências,
+% dessa forma apresentando um algoritmo que, mantendo o espírito
+% original da utilização de Motivação Instrínseca no Aprendizado por
+% Reforço, acrescenta alternativas de implementação buscando obter
+% melhorias de desempenho no aprendizado. Abaixo são descritas as
+% motivações e respectivas motivações teóricas e/ou de cunho prático.
 
-% % Nas linhas \ref{alg:mod:ind:model}, \ref{alg:mod:ind:ql} e \ref{alg:mod:ind:qo}, os índices de $r^e_t$ e $r^i_t$ foram modificados para $r^e_{t+1}$ e $r^i_{t+1}$, respectivamente. Isso foi feito para permitir que as atualizações que utilizam esses valores considerassem a transição $s_t,\ a_t \leftarrow s_{t+1}$ ao invés da precedente a esta, como era anteriormente. Ainda de acordo com essa modificação, a obtenção de $r^e_{t+1}$, que anteriormente era realizada após a linha \ref{alg:mod:re2:localantigo}, passa a ser realizada logo após a transição de estados (linha \ref{alg:mod:re2}).
+% Nas linhas \ref{alg:mod:ind:model}, \ref{alg:mod:ind:ql} e
+% \ref{alg:mod:ind:qo}, os índices de $r^e_t$ e $r^i_t$ foram
+% modificados para $r^e_{t+1}$ e $r^i_{t+1}$, respectivamente. Isso
+% foi feito para permitir que as atualizações que utilizam esses
+% valores considerassem a transição $s_t,\ a_t \leftarrow s_{t+1}$ ao
+% invés da precedente a esta, como era anteriormente. Ainda de acordo
+% com essa modificação, a obtenção de $r^e_{t+1}$, que anteriormente
+% era realizada após a linha \ref{alg:mod:re2:localantigo}, passa a
+% ser realizada logo após a transição de estados (linha
+% \ref{alg:mod:re2}).
 
-% % A atualização do modelo da política parcial na proposta original, é precedida de um teste para evitar que a política parcial correspondente ao evento saliente que possa ter ocorrido no passo atual, $o_e$, seja processada (linha \ref{alg:mod:oe:if}). Uma vantagem advinda disso é o de se poder utilizar os valores de $Q^{o_e}$ já atualizados. Entretanto, como a atualização de $Q^{o_e}$ somente ocorre ao final do algoritmo, é necessário esperar os próximos passos para utilizar os valores atualizados.  Dessa forma, e como a primeira referência a $o_e$ ocorre na linha \ref{alg:mod:oe:priocorr}, na nova proposta a inicialização e atribuição foram adicionadas nas linhas \ref{alg:mod:oe:ini} e \ref{alg:mod:oe:atr}, respectivamente. Isso foi feito por dois motivos: (i) definir $o_e$ de forma explícita no algoritmo e (ii) tratar os valores que $o_e$ assume de acordo com a lógica de atualização do modelo da política parcial, aproveitando os valores atualizados de $Q^{o_e}$.
+% A atualização do modelo da política parcial na proposta original, é
+% precedida de um teste para evitar que a política parcial
+% correspondente ao evento saliente que possa ter ocorrido no passo
+% atual, $o_e$, seja processada (linha \ref{alg:mod:oe:if}). Uma
+% vantagem advinda disso é o de se poder utilizar os valores de
+% $Q^{o_e}$ já atualizados. Entretanto, como a atualização de
+% $Q^{o_e}$ somente ocorre ao final do algoritmo, é necessário esperar
+% os próximos passos para utilizar os valores atualizados. Dessa
+% forma, e como a primeira referência a $o_e$ ocorre na linha
+% \ref{alg:mod:oe:priocorr}, na nova proposta a inicialização e
+% atribuição foram adicionadas nas linhas \ref{alg:mod:oe:ini} e
+% \ref{alg:mod:oe:atr}, respectivamente. Isso foi feito por dois
+% motivos: (i) definir $o_e$ de forma explícita no algoritmo e (ii)
+% tratar os valores que $o_e$ assume de acordo com a lógica de
+% atualização do modelo da política parcial, aproveitando os valores
+% atualizados de $Q^{o_e}$.
 
-% % O algoritmo original prevê a adição de estados às políticas parciais de forma retroativa: caso o agente, partindo de $s_t$ alcance $s_{t+1}$ e $s_{t+1} \in I^o$, $s_t$ é adicionado a $I^o$. Entretanto, caso uma política parcial possa ser reiniciada em um estado terminal, pode ser gerado um ciclo de repetição indefinido em que a política parcial chama a si mesma ao terminar. Dessa forma, na linha \ref{alg:mod:addI} foi adicionado um teste para evitar que um estado terminal da política parcial seja adicionado ao seu conjunto iniciador.
+% O algoritmo original prevê a adição de estados às políticas parciais
+% de forma retroativa: caso o agente, partindo de $s_t$ alcance
+% $s_{t+1}$ e $s_{t+1} \in I^o$, $s_t$ é adicionado a
+% $I^o$. Entretanto, caso uma política parcial possa ser reiniciada em
+% um estado terminal, pode ser gerado um ciclo de repetição indefinido
+% em que a política parcial chama a si mesma ao terminar. Dessa forma,
+% na linha \ref{alg:mod:addI} foi adicionado um teste para evitar que
+% um estado terminal da política parcial seja adicionado ao seu
+% conjunto iniciador.
 
-% % Como a escolha de quais ações são aplicáveis nesse momento é um fator importante na atualização do modelo das políticas parciais, na proposta original, as funções $P^o$ e $R^o$ somente são atualizadas caso a ação $a_t$ executada no passo atual seja gulosa para a política parcial em questão (linha \ref{alg:mod:atgreedy}). Isso pode ser explicado pelo fato de que a atualização dessas funções representem um consumo significativo de recursos computacionais. Na proposta atual, essa restrição foi investigada, sendo executados experimentos também para o caso em que não há a necessidade de $a_t$ ser a ação gulosa.
+% Como a escolha de quais ações são aplicáveis nesse momento é um
+% fator importante na atualização do modelo das políticas parciais, na
+% proposta original, as funções $P^o$ e $R^o$ somente são atualizadas
+% caso a ação $a_t$ executada no passo atual seja gulosa para a
+% política parcial em questão (linha \ref{alg:mod:atgreedy}). Isso
+% pode ser explicado pelo fato de que a atualização dessas funções
+% representem um consumo significativo de recursos computacionais. Na
+% proposta atual, essa restrição foi investigada, sendo executados
+% experimentos também para o caso em que não há a necessidade de $a_t$
+% ser a ação gulosa.
 
-% % Na proposta original, a atualização de $Q_B$ para políticas parciais (planejamento SMDP, linha \ref{alg:mod:qbo}) considerava para esse cálculo quaiquer estados $s_t$ que o agente viesse a visitar. Para evitar problemas de incosistência entre a função-valor e o conjunto iniciador de uma política parcial $o$, foi adicionado um teste que somente atualiza $Q_B(s_t,\ o)$ para uma dada política parcial $o$ se $s_t \in I^o$. Dessa forma, evita-se que seja atribuído um valor positivo à execução de uma política parcial $o$ em um estado em que a política parcial não possa ser executada. Uma outra vantagem decorrente dessa modificação é a possível economia de recursos computacionais, já que algumas atualizações desnecessárias são potencialmente evitadas.
+% Na proposta original, a atualização de $Q_B$ para políticas parciais
+% (planejamento SMDP, linha \ref{alg:mod:qbo}) considerava para esse
+% cálculo quaiquer estados $s_t$ que o agente viesse a visitar. Para
+% evitar problemas de incosistência entre a função-valor e o conjunto
+% iniciador de uma política parcial $o$, foi adicionado um teste que
+% somente atualiza $Q_B(s_t,\ o)$ para uma dada política parcial $o$
+% se $s_t \in I^o$. Dessa forma, evita-se que seja atribuído um valor
+% positivo à execução de uma política parcial $o$ em um estado em que
+% a política parcial não possa ser executada. Uma outra vantagem
+% decorrente dessa modificação é a possível economia de recursos
+% computacionais, já que algumas atualizações desnecessárias são
+% potencialmente evitadas.
 
 % \begin{algorithm}
 % \caption{Algoritmo X}
@@ -294,66 +450,126 @@
 % \end{algorithm}
 	
 % \section{Experimentos}
-% Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec hendrerit tempor tellus. Donec pretium posuere tellus. Proin quam nisl, tincidunt et, mattis eget, convallis nec, purus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla posuere. Donec vitae dolor. Nullam tristique diam non turpis. Cras placerat accumsan nulla. Nullam rutrum. Nam vestibulum accumsan nisl.
+% Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
+% hendrerit tempor tellus. Donec pretium posuere tellus. Proin quam
+% nisl, tincidunt et, mattis eget, convallis nec, purus. Cum sociis
+% natoque penatibus et magnis dis parturient montes, nascetur
+% ridiculus mus. Nulla posuere. Donec vitae dolor. Nullam tristique
+% diam non turpis. Cras placerat accumsan nulla. Nullam rutrum. Nam
+% vestibulum accumsan nisl.
 
 % \section{Resultados e Discussão}
-% Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec hendrerit tempor tellus. Donec pretium posuere tellus. Proin quam nisl, tincidunt et, mattis eget, convallis nec, purus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla posuere. Donec vitae dolor. Nullam tristique diam non turpis. Cras placerat accumsan nulla. Nullam rutrum. Nam vestibulum accumsan nisl.
+% Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
+% hendrerit tempor tellus. Donec pretium posuere tellus. Proin quam
+% nisl, tincidunt et, mattis eget, convallis nec, purus. Cum sociis
+% natoque penatibus et magnis dis parturient montes, nascetur
+% ridiculus mus. Nulla posuere. Donec vitae dolor. Nullam tristique
+% diam non turpis. Cras placerat accumsan nulla. Nullam rutrum. Nam
+% vestibulum accumsan nisl.
 
-% % % Checar localização desse parágrafo (seria um de arcabouço teórico?)
-% % % Espera-se como resultado da aplicação da utilização de Motivação Intrínseca em Aprendizado por Reforço um aceleramento do processo de aprendizado através da exploração da estrutura hierárquica do problema. Esse aproveitamento pode ser feito em três etapas: (i) identificação de sub-problemas e (ii) aprendizado e refinamento da solução dos sub-problemas (iii) composição da solução para a tarefa inicial utilizando as soluções dos sub-problemas.
+% Checar localização desse parágrafo (seria um de arcabouço teórico?)
+% Espera-se como resultado da aplicação da utilização de Motivação
+% Intrínseca em Aprendizado por Reforço um aceleramento do processo de
+% aprendizado através da exploração da estrutura hierárquica do
+% problema. Esse aproveitamento pode ser feito em três etapas: (i)
+% identificação de sub-problemas e (ii) aprendizado e refinamento da
+% solução dos sub-problemas (iii) composição da solução para a tarefa
+% inicial utilizando as soluções dos sub-problemas.
 
-% % Para testar as propostas relacionadas ao algoritmo, procedeu-se à realização de experimentos , cuja função seria a de verificar empiricamente a validade da implementação. Essa verificação empírica serviria a dois propósitos: checar a consistência da implementação e avaliar a qualidade das modificações propostas.  Um experimento que se enquadra no primeiro dos propósitos consisitiu em avaliar a quantidade e valor das recompensas intrínsecas recebidas associadas a cada evento saliente possível (um resultado similar foi apresentado na Figura 4 do artigo original). O experimento consistiu de 100 repetições de $5\times10^5$ passos cada, onde o agente aprendia de acordo com o Algoritmo \ref{alg:modificado}. Os resultados estão presentes na figura \ref{fig:rixt}, onde são apresentados os valores de recompensa intrínseca recebidos pelo agente por passos do experimento.
+% Para testar as propostas relacionadas ao algoritmo, procedeu-se à
+% realização de experimentos , cuja função seria a de verificar
+% empiricamente a validade da implementação. Essa verificação
+% empírica serviria a dois propósitos: checar a consistência da
+% implementação e avaliar a qualidade das modificações propostas.
+% Um experimento que se enquadra no primeiro dos propósitos
+% consisitiu em avaliar a quantidade e valor das recompensas
+% intrínsecas recebidas associadas a cada evento saliente possível
+% (um resultado similar foi apresentado na Figura 4 do artigo
+% original). O experimento consistiu de 100 repetições de
+% $5\times10^5$ passos cada, onde o agente aprendia de acordo com o
+% Algoritmo \ref{alg:modificado}. Os resultados estão presentes na
+% figura \ref{fig:rixt}, onde são apresentados os valores de
+% recompensa intrínseca recebidos pelo agente por passos do
+% experimento.
 
-% % A análise dos resultados presentes na Figura \ref{fig:rixt} sugere algumas características do aprendizado resultante: o agente inicialmente procede à execução das tarefas mais simples, como ligar/desligar a luz. Isso pode ser visto pela frequência e prematuridade com que o agente recebe recompensas intrínsecas para essas tarefas. Pode-se perceber uma variação dos valores recebidos associados ao evento saliente com a repetição dos mesmos: há uma tendência de \emph{diminuição} dos valores recebidos para eventos salientes repetidos.
+% A análise dos resultados presentes na Figura \ref{fig:rixt} sugere
+% algumas características do aprendizado resultante: o agente
+% inicialmente procede à execução das tarefas mais simples, como
+% ligar/desligar a luz. Isso pode ser visto pela frequência e
+% prematuridade com que o agente recebe recompensas intrínsecas para
+% essas tarefas. Pode-se perceber uma variação dos valores recebidos
+% associados ao evento saliente com a repetição dos mesmos: há uma
+% tendência de \emph{diminuição} dos valores recebidos para eventos
+% salientes repetidos.
 
-% % \begin{figure}
-% %     \centering
-% %     \includegraphics[width=\textwidth]{r_i-2014-07-12_07-15-03-Teri.eps}
-% %     \caption{Evolução da recompensa intrínseca recebida no aprendizado}
-% %     \label{fig:rixt}
-% % \end{figure}
+\begin{figure}
+  \centering
+  \begin{subfigure}[b]{\textwidth}
+    \centering
+    \begin{subfigure}[b]{0.47\textwidth}
+      \includegraphics[width=\textwidth]{EfeitoMI}
+      \caption{Efeito da Motivação Intrínseca no Aprendizado}
+      \label{fig:mi}
+    \end{subfigure}
+    ~
+    \begin{subfigure}[b]{0.47\textwidth}
+      \includegraphics[width=\textwidth]{toyonxstep-mediaacum-epsopt-parcial-02-04-06-08}
+      \caption{Influência de $\epsilon_{p^3}$ no Aprendizado}
+      \label{fig:ep3}
+    \end{subfigure}
+  \end{subfigure}
 
-% % É importante notar, entretanto, que, marcadamente no caso do evento \emph{lightON}, parece haver algumas vezes um \emph{aumento} da recompensa intrínseca recebida com a repetição. Isso pode ser devido à definição de evento saliente utilizada especificamente para esse experimento (somente atributos relacionados aos \tr{status} do ambiente), o que, associado à definição de $P^o$ para a descrição completa do estado, permitiria também uma evolução crescente de seus valores.
+  \begin{subfigure}[t]{\textwidth}
+    \includegraphics[width=\textwidth]{r_i-2014-07-12_07-15-03-Teri}
+    \caption{Recebimento de Recompensa Intrínseca Durante o Aprendizado}
+    \label{fig:ri}
+  \end{subfigure}
+  \caption{}\label{fig:res}
+\end{figure}
 
-% % \begin{figure}
-% %     \centering
-% %     \includegraphics[width=\textwidth]{imrlvsql.png}
-% %     \caption{Comparação de aprendizado utilizando ou não motivação intrínseca para descoberta de políticas parciais}
-% %     \label{fig:imrlvsql}
-% % \end{figure}
+% Para verificar a suscetibilidade do algoritmo proposto seria à
+% \tr{estratégia de abandono da política parcial}, foram realizadas
+% repetições de experimentos com variações gradativas do valor de
+% $\epsilon_o$, conforme descrito na seção \tr{...}. Os resultados são
+% apresentados na figura \ref{fig:epsopt}. O gráfico mostra a média
+% cumulativa de ativações do \emph{monkey} por passo. Pela análise
+% desses resultados, podemos verificar a variação do desempenho do
+% aprendizado com o valor escolhido para $\epsilon_o$, sugerindo que a
+% correta escolha desse parâmetro possui um impacto significativo no
+% desempenho de aprendizado do agente. \tr{TODO: complementar}
 
-% % Pode-se também observar uma aparente \emph{graduação} do agente na execução dos sub-problemas: após o aprendizado dos sub-problemas mais simples, começam a ocorrer com mais frequência recompensas intrínsecas associadas a sub-problemas mais complexas, que por sua vez são dependentes das mais simples. Em última instância, a sub-tarefa \emph{monkeyON} ocorre seguindo o padrão descrito acima e aproximadamente após o aprendizado dos sub-problemas mais simples de que \emph{monkeyON} depende. Essa é, das características citadas, a de maior interesse para este trabalho, pois sugere justamente a ocorrência de um aprendizado (e consequente utilização) das políticas parciais de uma forma \emph{hierárquica}, partindo de sub-problemas componentes mais simples até atinger o objetivo final do problema.
-
-% % Para avaliar a importância relativa da descoberta de políticas parciais com auxílio de motivação intrínseca, foi realizado um experimento no qual o agente aprende com o Q-Learning tradicional, ou seja, não utiliza recompensas intrínsecas para a descoberta de políticas parciais e comparado com o desempenho do agente que utiliza o Algoritmo \ref{alg:modificado} para o aprendizado. O resultado desse experimento pode ser visto na figura \ref{fig:imrlvsql}, que mostra a quantidade média de passos necessárias para atingir o objetivo à medida que o agente o atinge, ou seja, quão rápido o agente consegue resolver a tarefa em \emph{cada vez menos passos}. Pela análise do gráfico, podemos ver que o agente que utiliza a motivação intrínseca além da extrínseca possui uma evolução mais rápida em relação ao agente que somente utiliza a motivação extrínseca, o que sugere que a vantagem da utilização da motivação intrínseca para obtenção de políticas parciais no aprendizado.
-
-% % \begin{figure}
-% %     \centering
-% %     \includegraphics[width=\textwidth]{epsopt.png}
-% %     \caption{Análise da sensibilidade do algoritmo à estratégia de abandono da política parcial}
-% %     \label{fig:epsopt}
-% % \end{figure}
-
-% % Para verificar a suscetibilidade do algoritmo proposto seria à \tr{estratégia de abandono da política parcial}, foram realizadas repetições de experimentos com variações gradativas do valor de $\epsilon_o$, conforme descrito na seção \tr{...}. Os resultados são apresentados na figura \ref{fig:epsopt}. O gráfico mostra a média cumulativa de ativações do \emph{monkey} por passo. Pela análise desses resultados, podemos verificar a variação do desempenho do aprendizado com o valor escolhido para $\epsilon_o$, sugerindo que a correta escolha desse parâmetro possui um impacto significativo no desempenho de aprendizado do agente. \tr{TODO: complementar}
-
-% % % Foram também investigadas duas estratégias de adição de novos estados à política parcial: (i) \tr{backward}, em que um novo estado $s_t$ somente é adicionado ao conjunto iniciador $I^o$ de uma política parcial $o$ se ocorrer que ao realizar a transição $s_t,\ a_t \rightarrow s_{t+1}$, tenha-se $s_{t+1} \in I^o$ e (ii) \tr{backward+forward}, em que ocorre a adição descrita em (i), além de: caso o agente, estando em $s_t \in I^o$, realizar a transição  $s_t,\ a_t \rightarrow s_{t+1}$, $s_{t+1}$ é incluído em $I^o$. Como no algoritmo original, somente era realizada a adição (i), mas no artigo original de políticas parciais \cite{option1999} é levantada também a possibilidade descrita em (ii), procedeu-se à investigação dos possíveis resultados decorrentes dessa nova adição. Os resultados desse experimento podem ser vistos na figura \ref{fig:dummy}, que mostra \tr{...}. Pela análise dos resultados aí presentes, podemos concluir que \tr{...}.
-
-% % % \begin{figure}
-% % %     \centering
-% % %     \includegraphics[width=0.75\textwidth]{dummy.png}
-% % %     \caption{\tr{TODO: consolidar e plotar} Comparação de aprendizado utilizando adições de estados à política parcial pelas estratégias \tr{backward} e \tr{backward+forward}}
-% % %     \label{fig:dummy}
-% % % \end{figure}
+% Foram também investigadas duas estratégias de adição de novos
+% estados à política parcial: (i) \tr{backward}, em que um novo estado
+% $s_t$ somente é adicionado ao conjunto iniciador $I^o$ de uma
+% política parcial $o$ se ocorrer que ao realizar a transição $s_t,\
+% a_t \rightarrow s_{t+1}$, tenha-se $s_{t+1} \in I^o$ e (ii)
+% \tr{backward+forward}, em que ocorre a adição descrita em (i), além
+% de: caso o agente, estando em $s_t \in I^o$, realizar a transição
+% $s_t,\ a_t \rightarrow s_{t+1}$, $s_{t+1}$ é incluído em $I^o$. Como
+% no algoritmo original, somente era realizada a adição (i), mas no
+% artigo original de políticas parciais \cite{option1999} é levantada
+% também a possibilidade descrita em (ii), procedeu-se à investigação
+% dos possíveis resultados decorrentes dessa nova adição. Os
+% resultados desse experimento podem ser vistos na figura
+% \ref{fig:dummy}, que mostra \tr{...}. Pela análise dos resultados aí
+% presentes, podemos concluir que \tr{...}.
 
 % \section{Conclusão}
-% Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec hendrerit tempor tellus. Donec pretium posuere tellus. Proin quam nisl, tincidunt et, mattis eget, convallis nec, purus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla posuere. Donec vitae dolor. Nullam tristique diam non turpis. Cras placerat accumsan nulla. Nullam rutrum. Nam vestibulum accumsan nisl.
+% Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec
+% hendrerit tempor tellus. Donec pretium posuere tellus. Proin quam
+% nisl, tincidunt et, mattis eget, convallis nec, purus. Cum sociis
+% natoque penatibus et magnis dis parturient montes, nascetur
+% ridiculus mus. Nulla posuere. Donec vitae dolor. Nullam tristique
+% diam non turpis. Cras placerat accumsan nulla. Nullam rutrum. Nam
+% vestibulum accumsan nisl.
 
-% % \begin{received}
-% % \end{received}
+% \begin{received}
+% \end{received}
 
-% % INCLUDE BIBLIOGRAPHY WHICH MUST FOLLOW kdmile.bst TEMPLATE
+% INCLUDE BIBLIOGRAPHY WHICH MUST FOLLOW kdmile.bst TEMPLATE
 % \bibliographystyle{kdmile}
 % \bibliography{kdmile}
-% % For information on how to write bibliography entries, 
-% % see file kdmileb.bib
+% For information on how to write bibliography entries, 
+% see file kdmileb.bib
 
 \end{document}
